--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ section{
  padding: 10rem 9% 2rem;
 }
 
-.header{
+/*.header{
   position:fixed;
   top: 0;
   left: 0;
@@ -47,7 +47,7 @@ section{
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-}
+
 
 .logo{
   font-size: 2.5rem;
@@ -61,7 +61,7 @@ section{
   color: var(--text-color);
   margin-left: 4rem;
   font-weight: 700;
-}
+}*/
 
 .navbar a:hover,
 .navbar a.active{
