--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   border: none;
   outline:none;
   scroll-behavior: smooth;
-  font-family: "Nunito", sans-serif;
+  font-family: "Nunito",sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
@@ -61,7 +61,7 @@ section{
   color: var(--text-color);
   margin-left: 4rem;
   font-weight: 700;
-}*/
+}
 
 .navbar a:hover,
 .navbar a.active{
@@ -71,7 +71,7 @@ section{
 .navbar a:hover{
   color: var(--main-color);
   text-shadow: 0 0 1rem var(--main-color);
-}
+}*/
 
 #menu-icon {
  font-size: 3.6rem;
@@ -79,7 +79,7 @@ section{
  display: none;
 }
 
-.home{
+/*.home{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -105,8 +105,11 @@ span{
   line-height: 1.3;
 }
 
+.home-content p{
+  font-size: 2rem;
+}*/
+
 .home-img img{
-  width: 25vw;
   animation: floatImage 4s ease-in-out infinite;
 }
 
@@ -120,11 +123,7 @@ span{
   100%{
       transform: translateY(0);
   }
-}
-
-.home-content p{
-  font-size: 2rem;
-}
+} 
 
 .social-media a{
   display: inline-flex;
